syntax = "proto3";
package pb;

message Slice {
    bytes Checksum = 1;
    int64 Offset = 2;
    int64 Length = 3;
}

message ManifestV1 {
    int64 Size = 1;
    repeated Slice Slices = 2;
}